[gd_scene load_steps=2 format=3 uid="uid://bt2mxcqh280r6"]

[ext_resource type="Script" uid="uid://bibfswta3ddps" path="res://Prefabs/Environment/Clouds/cloud_spawner.gd" id="1_c18um"]

[node name="CloudSpawner" type="Node2D"]
script = ExtResource("1_c18um")

[node name="CloudSpawnCooldown" type="Timer" parent="."]

[connection signal="timeout" from="CloudSpawnCooldown" to="." method="_on_cloud_spawn_cooldown_timeout"]
